--- a/src/styles/Feed.scss
+++ b/src/styles/Feed.scss
@@ -14,7 +14,7 @@
       background-color: #3897f0;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 100vw;
       cursor: pointer;
 
       &:hover {
